[B]Errata[/B]
- [XBMC] Thumbnails sometimes turns into black box or Folder (XBMC not detecting when thumbnail is set and defaulting to icon?)
- [XBMC] When sorting items, it's impossible to get them to return to their original order
- [XBMC] Has Excessive Memory use after running the plugin for prolonged periods of time
- [RTMPDUMP] Doesn't support handshake type 10 which is required by youtube.

[B]Version 3.4.4[/B]
- Fixed playback after youtube javascript site changes
- Fixed age verification, by making playback always do a full http login on restricted videos since google changed their detection algorithm
- Fixed addition of User Agent was causing problems for Windows and IOS clients. (Thanks to m-hume on github for the fix)
- Fixed download folder was not working for new users of the plugin. (Thanks to Ste Robinson, for pointing this out again)

[B]Version 3.4.3[/B]
- Fixed login

[B]Version 3.4.2[/B]
- Fixed playback bug cause by youtube site changes
- Fixed bug when using unicode characters in search
- Fixed bug in spanish translations

[B]Version 3.4.1[/B]
- Changed plugin release now controlled by release script

[B]Version 3.4.0[/B]
- Fixed Login was broken after youtube changed look
- Fixed Playback of over 18 videos was broken with the new youtube look
- Fixed User scraper for my liked videos
- Fixed scraper for Top 100 Trailers, Youtube weekly Top 100 Music videos, and Youtube Disco
- Added Translations for a multitude of languages, special thanks to the Transifex project

[B]Version 3.3.0[/B]
- Fixed playback of over 18 videos, should now work if the user is logged in.
- Fixed bug where playback or video listing would fail due to bug in cache
- Fixed problem in core that would sometimes break playback
- Fixed problem in player that would cause hard crash when playback stream isn't available
- Disabled movie section since it seems completely broken on the home page
- Disabled show section since it seems completely broken on the home page